<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Nome -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp" />

    <!-- E-mail -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <!-- Senha -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="newPassword"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <!-- Confirmar Senha -->
    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:autofillHints="newPasswordConfirm"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <!-- Botão de Cadastro -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/buttonTextColor"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/brown"
        android:contentDescription="@string/sign_up_button_description" />
</LinearLayout>
