<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@color/inputBackground"
        android:textColorHint="@color/hintColor"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/login_button_text"
        android:textColor="@color/buttonTextColor"
        android:layout_marginTop="24dp"
        app:cornerRadius="24dp"
        app:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/login_button_description" />

    <TextView
        android:id="@+id/entraVisitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_como_visitante"
        android:textColor="@color/brown"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent" />


</LinearLayout>
